# claude-researcher

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  README_UI.md  pyproject.toml  test_live_events.py
api/: db.py  events.py  kg.py  models.py  question_manager.py  server.py  ui_interaction.py
api/routes/: agents.py  events.py  findings.py  knowledge.py  report.py  research.py  sessions.py  verification.py
examples/: basic_research.py  chatgpt-deep-research-ai-pentesting.md  claude-researcher-ai-pentesting.md  custom_config.py
future_scope/: MASTER_ROADMAP.md  ML_MODELS_ROADMAP.md  PROGRESS.md  README.md  TECHNOLOGIES.md  classical-ml-integration.md  data-sources.md  improvements-research.md  issues.md  power-user-features-research.md  user-interaction-design.md
future_scope/screens/agent_thinking_transparency_panel/: code.html
future_scope/screens/cove_verification_pipeline/: code.html
future_scope/screens/knowledge_graph_visualization/: code.html
future_scope/screens/new_research_session_setup/: code.html
future_scope/screens/real-time_research_activity_feed/: code.html
future_scope/screens/research_findings_browser/: code.html
future_scope/screens/research_report_preview/: code.html
future_scope/screens/research_session_dashboard/: code.html
future_scope/screens/research_sources_index/: code.html
scripts/: dev.sh  start_api.sh
src/: __init__.py  logging_config.py  main.py
src/agents/: __init__.py  base.py  director.py  intern.py  kg_processor.py  manager.py  parallel.py
src/audit/: __init__.py  decision_logger.py
src/benchmark/: __init__.py
src/costs/: __init__.py  tracker.py
src/events/: __init__.py
src/interaction/: __init__.py  config.py  handler.py  listener.py  models.py
src/knowledge/: __init__.py  credibility.py  fast_ner.py  graph.py  models.py  query.py  store.py  visualize.py
src/memory/: __init__.py  external.py  hybrid.py
src/models/: __init__.py  findings.py
src/reports/: __init__.py  writer.py
src/retrieval/: __init__.py  bm25.py  deduplication.py  embeddings.py  findings.py  hybrid.py  memory_integration.py  query_expansion.py  reranker.py  vectorstore.py
src/storage/: __init__.py  database.py
src/tools/: __init__.py  academic_search.py  web_search.py
src/verification/: __init__.py  confidence.py  cove.py  critic.py  hhem.py  json_utils.py  metrics.py  models.py  pipeline.py
ui/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/session/[id]/: page.tsx
ui/app/session/[id]/agents/: page.tsx
ui/app/session/[id]/graph/: page.tsx
ui/app/session/[id]/sources/: page.tsx
ui/app/session/[id]/verify/: page.tsx
ui/app/test-websocket/: page.tsx
ui/components/: ActivityFeed.tsx  FindingsBrowser.tsx  NewSessionForm.tsx  QuestionModal.tsx  ReportPreview.tsx  SourcesBrowser.tsx
ui/lib/: websocket.ts
