[project]
name = "claude-researcher"
version = "0.2.0"
description = "Hierarchical deep research agent built on Claude Code Agent SDK with knowledge graph"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "anthropic>=0.40.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "pydantic>=2.5.0",
    "aiosqlite>=0.19.0",
    "anyio>=4.0.0",
    "networkx>=3.2.0",
    "pyvis>=0.3.2",
    "numpy>=1.26.0",
    # Hybrid retrieval dependencies
    "sentence-transformers>=3.0.0",
    "chromadb>=1.0.0",
    # Deduplication and fast NER
    "datasketch>=1.6.0",
    "spacy>=3.7.0",
]

# Uses Claude Agent SDK - automatically uses Claude Code's credentials

[project.scripts]
researcher = "src.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
