[project]
name = "claude-researcher"
version = "0.2.0"
description = "Hierarchical deep research agent built on Claude Code Agent SDK with knowledge graph"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Karan Prasad", email = "hello@karanprasad.com" },
]
keywords = ["ai", "research", "claude", "agents", "knowledge-graph", "deep-research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "anthropic>=0.40.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "pydantic>=2.5.0",
    "aiosqlite>=0.19.0",
    "anyio>=4.0.0",
    "networkx>=3.2.0",
    "pyvis>=0.3.2",
    "numpy>=1.26.0",
    # Hybrid retrieval dependencies
    "sentence-transformers>=3.0.0",
    "chromadb>=1.0.0",
    # Deduplication and fast NER
    "datasketch>=1.6.0",
    "spacy>=3.7.0",
    # HHEM hallucination detection (source-grounding verification)
    "transformers>=4.36.0",
    # HTTP client for Bright Data API
    "httpx>=0.27.0",
    # Environment variable management
    "python-dotenv>=1.0.0",
    # API server dependencies
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/thtskaran/claude-researcher"
Repository = "https://github.com/thtskaran/claude-researcher"
Issues = "https://github.com/thtskaran/claude-researcher/issues"
Author = "https://karanprasad.com"

[project.scripts]
researcher = "src.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
